# telemetry-server

./: CMakeLists.txt  GetHandler.cpp  GetHandler.h  PostHandler.cpp  PostHandler.h  README.md  Telemetry.cpp  Telemetry.h  Tests.cmake  Tests.cpp  Tests.h  httplib.cmake  json.cmake  main.cpp  sonar-project.properties
.github/workflows/: build-and-test.yml  static-analysis-and-coverage.yml
src/: EventHandler.cpp  EventHandler.h  GetHandler.cpp  GetHandler.h  Logger.h  PostHandler.cpp  PostHandler.h  SimpleLogger.cpp  SimpleLogger.h  Telemetry.cpp  Telemetry.h  main.cpp
tests/: CMakeLists.txt  FakeLogger.h  GetHandlerTest.cpp  PostHandlerTest.cpp  TelemetryTest.cpp
