SET(PROJECT_TEST ${PROJECT_NAME}-tests)

include_directories(${CMAKE_SOURCE_DIR})

set(${PROJECT_TEST}_SOURCES
    TelemetryTest.cpp
    PostHandlerTest.cpp
    GetHandlerTest.cpp
)

add_executable(${PROJECT_TEST} ${${PROJECT_TEST}_SOURCES})
target_link_libraries(${PROJECT_TEST} PRIVATE Catch2::Catch2WithMain ${PROJECT_NAME}-lib)

include(CTest)
include(Catch)
catch_discover_tests(${PROJECT_TEST})
